; ModuleID = '/home/carl/AnghaBench/freebsd/sys/x86/x86/extr_identcpu.c_identify_cpu_fixup_bsp.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/x86/x86/extr_identcpu.c_identify_cpu_fixup_bsp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cpu_vendor_id = common dso_local global i32 0, align 4
@cpu_high = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @identify_cpu_fixup_bsp() #0 {
  %1 = alloca [4 x i32], align 16
  %2 = call i32 (...) @find_cpu_vendor_id()
  store i32 %2, i32* @cpu_vendor_id, align 4
  %3 = call i64 (...) @fix_cpuid()
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %10

5:                                                ; preds = %0
  %6 = getelementptr inbounds [4 x i32], [4 x i32]* %1, i64 0, i64 0
  %7 = call i32 @do_cpuid(i32 0, i32* %6)
  %8 = getelementptr inbounds [4 x i32], [4 x i32]* %1, i64 0, i64 0
  %9 = load i32, i32* %8, align 16
  store i32 %9, i32* @cpu_high, align 4
  br label %10

10:                                               ; preds = %5, %0
  ret void
}

declare dso_local i32 @find_cpu_vendor_id(...) #1

declare dso_local i64 @fix_cpuid(...) #1

declare dso_local i32 @do_cpuid(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
